Opened 15 years ago
Closed 15 years ago
#5862 closed bug (fixed)
CLI parameter --delay is ignored
Reported by: | humdinger | Owned by: | julun |
---|---|---|---|
Priority: | normal | Milestone: | |
Component: | Applications/Screenshot | Version: | R1/Development |
Keywords: | Cc: | WPJvanderMeer@… | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev36555.
The --delay parameter is ignored.
Attachments (1)
Change History (10)
comment:1 by , 15 years ago
comment:2 by , 15 years ago
You're right. With --silent it works. But it should also work without that, right? At least it did so some time ago, because my 'nifty' desklink script worked before:
#!/bin/sh # Add Screenshot to the Deskbar tray cd /boot/system/apps desklink "cmd=Active window (2s):Screenshot --window --border --delay 2" "cmd=Remove replicant:desklink --remove=Screenshot" Screenshot
:)
comment:3 by , 15 years ago
As far as I can tell, without the silent parameter, all it does is set the starting delay that eventually shows up in the UI. No idea if that behavior was changed recently since I've never really kept up with Screenshot development. Without --silent I'm somewhat puzzled as to what you're expecting though, did you want it to wait the delay before popping up the screenshot window, or what?
comment:4 by , 15 years ago
Yes. I want to get this 2 seconds delay to make my target window active, before the GUI pops up to set name, destination and save the bugger.
comment:5 by , 15 years ago
This could be the result of the changes I made to save the Screenshot settings. I'll look into it.
by , 15 years ago
Attachment: | Screenshot-delay-wim.patch added |
---|
This patch makes sure that the the command line "--delay" switch is not ignored.
comment:6 by , 15 years ago
Cc: | added |
---|
I patched the application in such a way that without specifying the delay on command line a screenshot with delay 0 is taken, even if the saved settings has a non-zero value.
comment:7 by , 15 years ago
Is there any chance to get this patch committed before the alpha2 release?
comment:8 by , 15 years ago
patch: | → 1 |
---|
Just curious, you are also passing --silent, right? I had a quick glance and the code appears to be handling the delay parameter, but it's not used unless you're also asking for silent operation.