Patch Screenshot to not ignore the delay time setting from the command line. This fixes ticket #5862

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36969 a95241bf-73f2-0310-859d-f6bbb57e9c96